# swagger_server/controllers/default_controller.py
@@ -1,36 +1,37 @@
 import connexion
 import six
 import requests
-from swagger_server.models.gpu import GPU  # noqa: E501
-from swagger_server.models.price import Price  # noqa: E501
-from swagger_server.models.profitability import Profitability  # noqa: E501
-from swagger_server.ethereum_calculator.ethereum import User
+import logging
+import json
+from swagger_server.models.price import Price 
+from swagger_server.models.profitability import Profitability  
+from swagger_server.models.current_user import CurrentUser
+from swagger_server.ethereum_calculator.ethereum import User, load_gpus
 from swagger_server import util
 
+all_gpus = dict()
+load_gpus(all_gpus)
+newUser = User(all_gpus)
 
-def get_eth_price(price=None):  # noqa: E501
-    """Your GET endpoint
-
-     # noqa: E501
-
-    :param price: current Ethereum price
-    :type price: float
-
-    :rtype: Price
-    """
-    
-    currPrice = Price(float(User.grab_eth_price()))
+def get_eth_price(price=None): 
+    currPrice = Price(float(User.grab_eth_price(newUser)))
     return currPrice
 
-def get_profitability(profitability=None):  # noqa: E501
-    """Your GET endpoint
-
-     # noqa: E501
-
-    :param profitability: profitability
-    :type profitability: float
-
-    :rtype: Profitability
-    """
-    currProfitability = Profitability(float(User.grab_profitability()))
+def get_profitability(profitability=None): 
+    currProfitability = Profitability(float(User.grab_profitability(newUser)))
     return currProfitability
+
+def get_user(user=None):  
+    gpus = []   
+    for gpu in newUser.All_Gpu_Dict:
+        gpus.append(gpu)
+
+    response = {
+        "ethereum" : newUser.ethereum,
+        "power_rate" : newUser.power_rate,
+        "user_gpu" : newUser.user_gpu,
+        "tax_rate" : newUser.tax_rate,
+        "total_cost" : newUser.total_cost  ,
+        "All_Gpu_Dict" : gpus
+    }
+    return  json.dumps(response)
