# swagger_server/models/__init__.py
@@ -3,6 +3,6 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
-from swagger_server.models.gpu import GPU
+from swagger_server.models.current_user import CurrentUser
 from swagger_server.models.price import Price
 from swagger_server.models.profitability import Profitability
