# swagger_server/models/current_user.py
@@ -1,0 +1,62 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class CurrentUser(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, user: object=None):  # noqa: E501
+        """CurrentUser - a model defined in Swagger
+
+        :param user: The user of this CurrentUser.  # noqa: E501
+        :type user: object
+        """
+        self.swagger_types = {
+            'user': object
+        }
+
+        self.attribute_map = {
+            'user': 'user'
+        }
+        self._user = user
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'CurrentUser':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The Current-User of this CurrentUser.  # noqa: E501
+        :rtype: CurrentUser
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def user(self) -> object:
+        """Gets the user of this CurrentUser.
+
+
+        :return: The user of this CurrentUser.
+        :rtype: object
+        """
+        return self._user
+
+    @user.setter
+    def user(self, user: object):
+        """Sets the user of this CurrentUser.
+
+
+        :param user: The user of this CurrentUser.
+        :type user: object
+        """
+
+        self._user = user
